--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,22 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" type="text/css" href="assets/lib/pdf_viewer.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/lib/toolbar.css"/>
+
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="assets/lib/pdf.js"></script>
+  <script src="assets/lib/pdf_viewer.js"></script>
+  <script src="assets/lib/index.js"></script>
+
+  <!-- <script src="assets/lib/html2pdf/jspdf.debug.js"></script>
+  <script src="assets/lib/html2pdf/more.js"></script> -->
+
+  <!-- <script src="/node_modules/html2pdf.js/dist/html2pdf.js"></script> -->
+  <script src="assets/lib/html2pdf/html2pdf.bundle.js"></script>
 </body>
 </html>
