--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <!-- FROM https://github.com/instructure/pdf-annotate.js/tree/master/shared/ -->
   <link rel="stylesheet" type="text/css" href="assets/lib/pdf_viewer.css"/>
   <link rel="stylesheet" type="text/css" href="assets/lib/toolbar.css"/>
 
@@ -15,14 +16,12 @@
 <body>
   <app-root></app-root>
 
+  <!-- FROM https://github.com/instructure/pdf-annotate.js/tree/master/shared/ -->
   <script src="assets/lib/pdf.js"></script>
   <script src="assets/lib/pdf_viewer.js"></script>
+  <!-- https://github.com/instructure/pdf-annotate.js/tree/master/docs/index.js-->
   <script src="assets/lib/index.js"></script>
 
-  <!-- <script src="assets/lib/html2pdf/jspdf.debug.js"></script>
-  <script src="assets/lib/html2pdf/more.js"></script> -->
-
-  <!-- <script src="/node_modules/html2pdf.js/dist/html2pdf.js"></script> -->
   <script src="assets/lib/html2pdf/html2pdf.bundle.js"></script>
 </body>
 </html>
